codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__exec_approval_history_decision_approved_short.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: lines_to_single_string(&decision)
---
✔ 你已批准 Codex 执行 echo hello world（本次）
