codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__experimental_features_popup.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: popup
---
  实 验 性 功 能
  切 换 实 验 性 功 能 。 更 改 会 保 存 到  config.toml。

› [ ] Ghost snapshots  Capture undo snapshots each turn.
  [x] Shell tool       Allow the model to run shell commands.

  Press space to select or enter to save for next conversation
