codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__exploring_step6_finish_cat_bar.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• 已探索
  └ 列出 ls -la
    读取 foo.txt, bar.txt
