codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__feedback_good_result_consent_popup.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: popup
---
  上 传 日 志 吗 ？

  将 发 送 以 下 文 件 ：
    • codex-logs.log
    • codex-connectivity-diagnostics.txt

› 1. 是   共 享 当 前  Codex 会 话 日 志 ， 便 于 团 队 排 查 问 题 。
  2. 否

  按  enter 确 认 ， 按  esc 返 回
