codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__feedback_selection_popup.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: popup
---
  这 次 体 验 如 何 ？

› 1. 故 障       崩 溃 、 报 错 、 卡 住 ， 或  UI/行 为 异 常 。
  2. 结 果 不 佳   输 出 跑 题 、 不 正 确 、 不 完 整 ， 或 没 有 帮 助 。
  3. 结 果 很 好   结 果 有 帮 助 、 正 确 、 高 质 量 ， 或 让 人 满 意 。
  4. 安 全 检 查   正 常 使 用 因 安 全 检 查 或 拒 绝 而 被 拦 截 。
  5. 其 他       速 度 慢 、 功 能 建 议 、 体 验 反 馈 ， 或 其 他 任 何 问 题 。
